--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
- "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required for Node.js backend'"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
